Try --add-opens in java service start command